fix: address Gemini review comments and add CI diagnostics (#307)
- Use isBlank() instead of trim().isEmpty() in JwtHeader.getEnc()
- Fix OAEPParameterSpec documentation accuracy in token-decryption.adoc
- Avoid re-reading first key file in loadMultipleKeys()
- Simplify configureAlgorithmPreferences() logic
- Add JWE PEM file COPY to Dockerfile.native.distroless and .jfr
- Add app container log dump script for CI observability
- Add INFO-level diagnostic logging to JweDecryptionConfigResolver

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>